--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <div class="info-item"><a href="https://www.gltjp.com/zh-hant/article/item/20658/" target="_blank">札幌必吃美食與推薦店家</a></div>
         </div>
 
-        <div class="info-card">
+     <div class="info-card">
             <h2>JR 火車時刻表（主要路線）</h2>
             <div class="info-item"><strong>新千歲機場 ↔ 札幌站（Rapid Airport 快速列車）</strong><br>
                 約每15分鐘一班，全程約37分鐘，成人單程 ¥1,150<br>
@@ -342,8 +342,14 @@
                 <a href="https://www.jrhokkaido.co.jp/global/english/train/" target="_blank">JR北海道官方</a> ｜
                 <a href="https://www.google.com/maps/dir/Sapporo+Station/Otaru+Station" target="_blank">路線圖</a>
             </div>
+            <div class="info-item"><strong>特別巴士預約（支笏湖冰濤節）</strong><br>
+                2月2日（Day 4）預約：氷濤BLUE LINER 巴士<br>
+                去程：JR千歲站 → 支笏湖冰濤節　16:50出發<br>
+                回程：支笏湖冰濤節 → JR千歲站　19:30出發<br>
+                （建議提前15–20分鐘到JR千歲站巴士站候車）
+            </div>
+            <div class="info-item"><strong>推薦 App：</strong> Japan Travel by NAVITIME / Google Maps / Hyperdia（可即時查詢延誤）</div>
         </div>
-
         <div class="info-card">
             <h2>保險資訊</h2>
             <div class="info-item"><span class="info-label">保險公司：</span> Zurich</div>
@@ -366,14 +372,15 @@
             <p style="color:#8B4513;margin:1rem 0;font-size:1.1rem;">下午茶：LeTAO本店　｜　晚餐：世壺屋</p>
             <button class="big-btn" onclick="showDetail(2)">查看詳細時間軸</button>
         </div>
-        <div class="day"><h2>2月1日 (日) Day 3　定山溪溫泉放空</h2><button class="big-btn" onclick="showDetail(3)">查看詳細時間軸</button></div>
-        <div class="day"><h2>2月2日 (一) Day 4　藻岩山滑雪場＋藻岩山夜景</h2><button class="big-btn" onclick="showDetail(4)">查看詳細時間軸</button></div>
+        <div class="day"><h2>2月1日 (日) Day 3　藻岩山滑雪場＋藻岩山夜景</h2><button class="big-btn" onclick="showDetail(3)">查看詳細時間軸</button></div>
+        <div class="day"><h2>2月2日 (一) Day 4　白色戀人公園 + 支笏湖冰濤節</h2><button class="big-btn" onclick="showDetail(4)">查看詳細時間軸</button></div>
         <div class="day"><h2>2月3日 (二) Day 5　盤溪滑雪場＋狸小路夜景</h2><button class="big-btn" onclick="showDetail(5)">查看詳細時間軸</button></div>
         <div class="day" style="border-left:16px solid var(--red);"><h2>2月4日 (三) Day 6　雪祭開幕日狂歡！</h2><button class="big-btn" style="background:var(--red);color:white;" onclick="showDetail(6)">立即查看</button></div>
         <div class="day"><h2>2月5日 (四) Day 7　掃貨＋返程</h2><button class="big-btn" onclick="showDetail(7)">查看詳細時間軸</button></div>
     </div>
 <div class="back-top" onclick="window.scrollTo({top:0,behavior:'smooth'})">置頂</div>
 </div>
+    
 <!-- 詳細日程表 -->
 <div id="details" class="content">
     <div id="detail-content" style="max-width:1000px;margin:0 auto;"></div>
@@ -759,53 +766,7 @@ function showDetail(day){
         </div>
     </div>`,
 
-3: `<div class="detail-day">
-    <h2 style="font-size:1.8rem;text-align:center;color:var(--romantic);margin-bottom:1rem;">Day 3　定山溪溫泉放空 + 白色戀人公園 + 支笏湖冰濤節</h2>
-
-    <div class="step"><span class="time">11:00 – 14:00</span>　<strong>白色戀人公園 (Shiroi Koibito Park)</strong><br>
-    冬季限定浪漫燈飾、巧克力工廠參觀、現烤白色戀人餅乾、聖誕風格拍照點<br>
-    建議買伴手禮（巧克力、餅乾禮盒）<br>
-    <small style="color:#555; display:block; margin-top:0.5rem;">
-        從札幌市中心搭地鐵東西線到「宮之澤站」下車，步行約7–10分鐘即到。
-    </small></div>
-
-    <div class="step"><span class="time">12:30 – 13:30</span>　<strong>午餐：Chocolate Lounge OXFORD</strong><br>
-    白色戀人公園內/附近的高級巧克力咖啡廳，招牌熱巧克力、巧克力甜點、輕食三明治，超適合情侶或甜點控</div>
-
-    <div class="step"><span class="time">13:00 – 14:00</span>　<strong>Bakeshop CHELSEA</strong><br>
-    附近人氣烘焙店，新鮮出爐的麵包、蛋糕、司康，推薦買幾個當下午茶或帶走</div>
-
-    <div class="step"><span class="time">15:30 – 20:00</span>　<strong>支笏湖冰濤節 (Lake Shikotsu Ice Festival)</strong><br>
-    冰雕燈光秀、冰滑梯、冰上活動、熱飲攤位，冬季限定浪漫雪景<br>
-    傍晚到晚上燈光點亮後最美，建議留到天黑拍夜景<br>
-    <strong>最佳交通方式：</strong> 從札幌站搭高速巴士（中央巴士）直達支笏湖溫泉（約1小時10分–1小時30分，冬季有冰濤節專車或加班車）<br>
-    費用：單程約 ¥1,200–1,500 / 人<br>
-    <a href="https://www.google.com/maps/dir/Japan,+Hokkaido,+Sapporo,+Nishi+Ward,+Miyanosawa+2,+2+Chome%E2%88%9211%E2%88%9236+%E7%99%BD%E8%89%B2%E6%88%80%E4%BA%BA%E5%85%AC%E5%9C%92/Lake+Shikotsuko+Visitor+Center,+Shikotsukoonsen,+Chitose,+Hokkaido+066-0281,+Japan/@42.9320061,141.3087058,11z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x5f0b281264c7cb53:0xc21e3cb8d40a0191!2m2!1d141.271757!2d43.0889197!1m5!1m1!1s0x5f753b23fa374b57:0x68c58bc17d3a5a7d!2m2!1d141.4041342!2d42.7727487!3e3?entry=ttu&g_ep=EgoyMDI2MDExMy4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D" target="_blank" style="color:var(--romantic);font-weight:bold;">
-    → Google Maps 路線（從白色戀人公園到支笏湖遊客中心，點擊查看詳細路線）
-    </a></div>
-
-    <div class="step"><span class="time">18:00 – 18:30</span>　<strong>LOG BEAR</strong><br>
-    支笏湖冰濤節會場內/附近的可愛熊主題拍照點或商店，冬季限定打卡點，適合短暫停留拍照或買小紀念品</div>
-
-    <!-- Day 3 互動地圖（放在底部） -->
-    <div style="margin:2.5rem 0 1rem; text-align:center;">
-        <strong>Day 3 白色戀人公園周邊互動地圖</strong><br>
-        <small style="color:#666; display:block; margin:0.5rem 0;">
-            可自由縮放、拖曳、點擊標記查看細節、搜尋路線
-        </small>
-        <iframe 
-            src="https://www.google.com/maps/d/u/0/embed?mid=1IGv_x7yYQWuRAB147fP9viFH9-FcE3o&ehbc=2E312F"
-            width="100%" 
-            height="500" 
-            style="border:0; border-radius:12px; box-shadow:0 8px 25px rgba(0,0,0,0.2);"
-            allowfullscreen="" 
-            loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-    </div>
-</div>`,
-
-        4: `<div class="detail-day">
+        3: `<div class="detail-day">
             <h2 style="font-size:1.8rem;text-align:center;color:var(--romantic);margin-bottom:1rem;">Day 4　藻岩山滑雪場＋藻岩山夜景</h2>
             <div class="weather-box"><strong>2月2日天氣預報（長期平均）：</strong> 高溫 -3°C / 低溫 -9°C，晴間多雲</div>
             <div class="snow-box"><strong>即時雪況預測：</strong> 藻岩山滑雪場積雪深度充足，適合初學者與夜滑（基於歷史長期平均）</div>
@@ -817,6 +778,37 @@ function showDetail(day){
             <a href="https://www.klook.com/zh-HK/activity/99611-mt-moiwa-ropeway/" target="_blank" class="ticket-link">Klook 藻岩山纜車票（常有折扣）</a>
             <div class="links"><a href="https://www.google.com/maps/place/Mount+Moiwa+Ropeway" target="_blank" class="location-link">藻岩山路線</a></div>
             </div>`,
+
+        4: `<div class="detail-day">
+            <h2 style="font-size:1.8rem;text-align:center;color:var(--romantic);margin-bottom:1rem;">Day 4　支笏湖冰濤節 + 白色戀人公園</h2>
+
+            <div class="step"><span class="time">11:00 – 14:00</span>　<strong>白色戀人公園 (Shiroi Koibito Park)</strong><br>
+            冬季限定浪漫燈飾、巧克力工廠參觀、現烤白色戀人餅乾<br>
+            <small>從札幌市中心搭地鐵東西線到「宮之澤站」下車，步行約7–10分鐘即到。</small></div>
+
+            <div class="step"><span class="time">12:30 – 13:30</span>　<strong>午餐：Chocolate Lounge OXFORD</strong><br>
+            公園內高級巧克力咖啡廳，熱巧克力與甜點超讚</div>
+
+            <div class="step"><span class="time">13:00 – 14:00</span>　<strong>Bakeshop CHELSEA</strong><br>
+            附近烘焙店，新鮮麵包、蛋糕、司康，適合買下午茶</div>
+
+            <div class="step"><span class="time">15:30 – 20:00</span>　<strong>支笏湖冰濤節 (Lake Shikotsu Ice Festival)</strong><br>
+            冰雕燈光秀、冰滑梯、熱飲攤位，傍晚燈光最美<br>
+            <strong>預約巴士資訊：</strong><br>
+            去程：JR千歲站 → 支笏湖冰濤節　16:50出發<br>
+            回程：支笏湖冰濤節 → JR千歲站　19:30出發<br>
+            <a href="https://www.google.com/maps/dir/Japan,+Hokkaido,+Sapporo,+Nishi+Ward,+Miyanosawa+2,+2+Chome%E2%88%9211%E2%88%9236+%E7%99%BD%E8%89%B2%E6%88%80%E4%BA%BA%E5%85%AC%E5%9C%92/Lake+Shikotsuko+Visitor+Center,+Shikotsukoonsen,+Chitose,+Hokkaido+066-0281,+Japan/@42.9320061,141.3087058,11z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x5f0b281264c7cb53:0xc21e3cb8d40a0191!2m2!1d141.271757!2d43.0889197!1m5!1m1!1s0x5f753b23fa374b57:0x68c58bc17d3a5a7d!2m2!1d141.4041342!2d42.7727487!3e3?entry=ttu&g_ep=EgoyMDI2MDExMy4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D" target="_blank" style="color:var(--romantic);font-weight:bold;">
+            → Google Maps 路線（從白色戀人公園到支笏湖遊客中心）
+            </a></div>
+
+            <div class="step"><span class="time">18:00 – 18:30</span>　<strong>LOG BEAR</strong><br>
+            支笏湖冰濤節會場內/附近的可愛熊主題拍照點或商店，冬季限定打卡點</div>
+
+            <div style="margin:2rem 0;text-align:center;">
+                <strong>Day 4 白色戀人公園周邊互動地圖</strong><br>
+                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1IGv_x7yYQWuRAB147fP9viFH9-FcE3o" width="100%" height="450" style="border:0;border-radius:12px;"></iframe>
+            </div>
+        </div>`,
 
         5: `<div class="detail-day">
             <h2 style="font-size:1.8rem;text-align:center;color:var(--romantic);margin-bottom:1rem;">Day 5　盤溪滑雪場＋狸小路夜景</h2>
